[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rgwml"
version = "0.0.298"
authors = [
  { name = "Ryan Gerard Wilson", email = "ryangerardwilson@gmail.com" },
]
description = "Manipulate data with code that is less a golden retriever, and more a Samurai's sword"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "numpy<2.0.0",
    "pymssql",
    "mysql-connector-python",
    "clickhouse-connect",
    "google-cloud-bigquery",
    "google-auth",
    "google-cloud-bigquery-storage",
    "google-cloud-storage",
    "google-auth-oauthlib", 
    "google-auth-httplib2",
    "google-api-python-client",
    "pandas-gbq",
    "xgboost",
    "matplotlib",
    "pillow",
    "scipy",
    "seaborn",
    "scikit-learn",
    "dask[dataframe]",
    "dask[complete]",
    "pyarrow",
    "distributed",
    "requests",
    "pymysql",
    "paramiko",
    "tables",
    "openai",
    "filetype",
    "tqdm",
    "requests-html",
    "transformers",
    "openai-whisper",
    "slack-sdk",
    "lxml[html_clean]",
    "bottle",
    "Flask",
    "Flask-CORS"
]

dynamic = ["scripts"]

[project.urls]
Homepage = "https://github.com/ryangerardwilson/rgwml_py"
Issues = "https://github.com/ryangerardwilson/rgwml_py"

[tool.setuptools.packages.find]
where = ["src"]

