[metadata]
name = rgwml
version = 0.0.178
author = Ryan Gerard Wilson
author_email = ryangerardwilson@gmail.com
description = Manipulate data with code that is less a golden retriever, and more a Samurai's sword
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ryangerardwilson/rgwml_py
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    pandas
    numpy<2.0.0
    pymssql
    mysql-connector-python
    clickhouse-connect
    google-cloud-bigquery
    google-auth
    pandas-gbq
    xgboost
    matplotlib
    pillow
    scipy
    seaborn
    scikit-learn
    dask[dataframe]
    dask[complete]
    pyarrow
    distributed
    requests
    pymysql
    paramiko
    tables
    google-cloud-bigquery-storage
    google-cloud-storage
    openai
    python-magic
    filetype
    tqdm
    lxml_html_clean
    requests-html
    torch
    transformers
    openai-whisper

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    rgwml = rgwml:main

